Tue Jan 29 09:33:52 2019  Rob Lauer  <rlauer6@comcast.net>

	[0.5]:
	* md-utils: pl
	- remove backticks from toc

Sun Jan 27 16:11:25 2019  Rob Lauer  <rlauer6@comcast.net>

	[0.4]:
	* md-utils.pl
	- remove backticks from links in rendered HTML
	- remove ',' from headings for TOC
