@@ -1,3 +1,9 @@
+Sun Mar 21 08:15:39 2021  Rob Lauer  <rlauer6@comcast.net>
+
+	* md-utils.pl
+	- remove '/' in links
+	- remove '{}' in links
+
 Tue Jan 29 09:33:52 2019  Rob Lauer  <rlauer6@comcast.net>
 
 	[0.5]:
